--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@
 /* ==== */
    --regular-text: 16px;
 	--lineheight: 1.65;
-	--main-font: cormorant-st, serif;
+	--main-font: Cormorant, serif;
+   --main-font-bold: Cormorant-bold, serif;
 	/* --systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif; */
 }
 
@@ -28,15 +29,41 @@
  }
 /* FONTS LOAD SECTION */
 
-@font-face { src: url("../fonts/Cormorant/Cormorant-Regular.ttf") format("ttf"); font-family: "cormorant-st"; font-weight: 400; font-style: normal; }
-@font-face { src: url("../fonts/Cormorant/Cormorant-Italic.ttf") format("ttf"); font-family: "cormorant-italic"; font-weight: 400; font-style: italic; }
-@font-face { src: url("../fonts/Cormorant/Cormorant-Bold.ttf") format("ttf"); font-family: "cormorant-bold"; font-weight: 700; font-style: normal; }
-@font-face { src: url("../fonts/Cormorant/Cormorant-BoldItalic.ttf") format("ttf"); font-family: "cormorant-Ibold"; font-weight: 700; font-style: italic; }
+@font-face { 
+   
+   font-family: "Cormorant"; 
+   src: url("./fonts/Cormorant/Cormorant-Regular.ttf") format("truetype") ; 
+   font-weight: 400; 
+   font-style: normal; 
+}
+
+@font-face { 
+   
+   font-style: "italic";
+   src: url("./fonts/Cormorant/Cormorant-Italic.ttf") format("truetype") ; 
+   font-family: "cormorant-italic"; 
+   font-weight: 400; 
+ }
+
+@font-face { 
+   
+   font-family: "cormorant-bold"; 
+   src: url("./fonts/Cormorant/Cormorant-Bold.ttf") format("truetype");
+    font-weight: 700; 
+    font-style: normal;
+ }
+@font-face { 
+   src: url("./fonts/Cormorant/Cormorant-BoldItalic.ttf") ;
+    font-family: "cormorant-Ibold"; 
+    font-weight: 700; 
+   font-style: italic;
+}
+
 
 /* GENERAL CSS SETTINGS */
 
 ::placeholder { color: #666; }
-::selection { background-color: var(--accent); color: #fff; }
+::selection { background-color: var(--accent); color: #c4c4c4; }
 input, textarea { outline: none; }
 input:focus:required:invalid, textarea:focus:required:invalid { border-color: red; }
 input:required:valid, textarea:required:valid { border-color: green; }
